Implement core resource leasing
